--- a/css/tao.css
+++ b/css/tao.css
@@ -6,6 +6,11 @@ body {
     font-family: "Inter", sans-serif !important;
 }
 
+body.with-navbar {
+    background-color: #1a1e1c;
+    padding: 80px 0 0 0;
+}
+
 .wrapper {
     background-color: #1a1e1c !important;
 }
@@ -15,6 +20,41 @@ body {
         padding-top: 0px;
     }
 }
+
+.ventnav {
+    /* background-color: #444cf7; */
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    display: block;
+    right: 8px;
+    bottom: 10px;
+}
+
+.ventnav svg {
+    display: block;
+}
+
+.ventnav:hover path {
+    fill: black;
+}
+
+
+/* .trinav {
+    height: 25px;
+    width: 25px;
+    background-image: url(../img/ui-dist-sprite.svg);
+    background-position: -706px 0;
+    position: absolute;
+    display: block;
+    right: 5px;
+    bottom: 10px;
+    display: none;
+}
+
+#trimenu:hover path {
+    fill: #1a3acc;
+} */
 
 .footer-brand {
     opacity: 1 !important;
