trying to resolve js dropdown issues

--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -46,6 +46,9 @@
     }
 }
 
+
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
+
 .scroll-pane {
     overflow-x: hidden;
     height: 800px;
