--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -1,3 +1,35 @@
+:root {
+    /* colors */
+    --brand-blue: #1a3acc;
+    --dark-blue: #001c9b;
+    --very-dark-blue: #000e4e;
+    --magenta: #ab1acc;
+    --fuchsia: #84017e;
+    --blood-red: #600000;
+    --dim-red: #ee0202;
+    --golden: #ccab1a;
+    --bright-orange: rgba(255, 111, 63, 0.5);
+    --orange: #ff6f3f;
+    --dark-olive: #1a1e1c;
+    --black: #0a0c0e;
+    --white: #ffffff;
+    --base-bright: #f0f4f7;
+    --bright-grey: #f2f2f2;
+    --light-grey: #cfcfcf;
+    --warm-grey: #818181;
+    --metal: #5a6771;
+    --ever-green: #142a2d;
+    --cool-blue: #e0e9fe;
+    --euphoria: #00050f;
+    /* properties */
+    --font-base-size: 14px;
+}
+
+body {
+    background-color: #1a1e1c;
+    font-family: "Inter", sans-serif !important;
+}
+
 .ventnav {
     /* background-color: #444cf7; */
     height: 25px;
@@ -13,7 +45,7 @@
 }
 
 .ventnav:hover path {
-    fill: #818181;
+    fill: var(--warm-grey);
 }
 
 .navbar-nav>li>a,
@@ -21,9 +53,9 @@
 .dropdown-submenu>li>a {
     font-family: "Inter", "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     border-width: 0;
-    color: #1a3acc;
+    color: var(--brand-blue);
     display: inline-block;
-    font-size: 14px;
+    font-size: var(--font-base-size);
     font-weight: 500;
     line-height: 1.2857142857142858;
     padding: 12px 20px;
@@ -36,7 +68,7 @@
         display: block;
         font-family: "Inter", "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
         line-height: 1.1;
-        color: #1a3acc;
+        color: var(--brand-blue);
         font-size: 30px;
         font-size: 22px;
         font-weight: 500;
@@ -103,7 +135,7 @@ a.anchor {
 
 #back-top a:hover {
     background-color: white;
-    color: #1a3acc;
+    color: var(--brand-blue);
     cursor: pointer;
 }
 
@@ -116,8 +148,8 @@ a.anchor {
 }
 
 #back-top:hover svg path {
-    color: #1a3acc;
-    fill: #1a3acc;
+    color: var(--brand-blue);
+    fill: var(--brand-blue);
 }
 
 svg path {
@@ -161,8 +193,6 @@ svg path {
 .footer .brand-footer a:hover {
     border-bottom: none !important;
 }
-
-.brand-footer {}
 
 .footer {
     font-size: 12px;
