--- a/greybox/sass/_coma__variables.scss
+++ b/greybox/sass/_coma__variables.scss
@@ -1,44 +1,59 @@
 //_variables.scss
-
 // TYPOGRAPHY
-$font-family-sans-serif:  "HelveticaNeueMedium", "HelveticaNeue-Medium", "Helvetica Neue Medium", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
-$font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
-$font-family-base:        $font-family-sans-serif !default;
-
+$font-family-sans-serif : "HelveticaNeueMedium",
+"HelveticaNeue-Medium",
+"Helvetica Neue Medium",
+"HelveticaNeue",
+"Helvetica Neue",
+Helvetica,
+Arial,
+sans-serif !default;
+$font-family-serif : Georgia,
+"Times New Roman",
+Times,
+serif !default;
+$font-family-monospace : Menlo,
+Monaco,
+Consolas,
+"Courier New",
+monospace !default;
+$font-family-base : $font-family-sans-serif !default;
 // ALT @FONT_FACE
-$ubuntu: 'Ubuntu', sans-serif;
-$cousine: 'Cousine', monospace;
-$oldstandard: 'Old Standard', serif;
-$menlo: 'menloregular', monospace;
-$proxima: 'Proxima Nova', sans-serif;
-$freight: 'freightbig_probold', Georgia, serif;
-$archivo: 'Archivo Black', sans-serif;
-$source: 'Source Sans Pro', sans-serif;
+$ubuntu: 'Ubuntu',
+sans-serif;
+$cousine: 'Cousine',
+monospace;
+$oldstandard: 'Old Standard',
+serif;
+$menlo: 'menloregular',
+monospace;
+$proxima: 'Proxima Nova',
+sans-serif;
+$freight: 'freightbig_probold',
+Georgia,
+serif;
+$archivo: 'Archivo Black',
+sans-serif;
+$source: 'Source Sans Pro',
+sans-serif;
 $varela: 'Varela Round' sans-serif;
-
-$font-size-base:     14px !default;
-$font-size-small:    ceil(($font-size-base * 0.85)) !default; // ~12px
-$font-size-med:      ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-large:    ceil(($font-size-base * 2.15)) !default; // ~30px
-
-$font-size-h1:       floor(($font-size-base * 2.6)) !default; // ~36px
-$font-size-h2:       floor(($font-size-base * 2.15)) !default; // ~30px
-$font-size-h3:       ceil(($font-size-base * 1.7)) !default; // ~24px
-$font-size-h4:       ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-h5:       $font-size-base !default;
-$font-size-h6:       ceil(($font-size-base * 0.85)) !default; // ~12px
-
-$font-weight-1:     400;
-$font-weight-2:     500;
-$font-weight-3:     900;
-
+$font-size-base : 14px !default;
+$font-size-small : ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-med : ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-large : ceil(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h1 : floor(($font-size-base * 2.6)) !default; // ~36px
+$font-size-h2 : floor(($font-size-base * 2.15)) !default; // ~30px
+$font-size-h3 : ceil(($font-size-base * 1.7)) !default; // ~24px
+$font-size-h4 : ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-h5 : $font-size-base !default;
+$font-size-h6 : ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-weight-1 : 400;
+$font-weight-2 : 500;
+$font-weight-3 : 900;
 $letter-spacing: .005em;
-
 $line-height-sm: 1.2857142857142858; // small
 $line-height-md: 1.4857142857142858; // alt
 $line-height-lg: 1.7857142857142858; // body
-
 $bodycolor: #f6f6f6; //body background color
 $accentcolor: #eee; //added to navbar
 $textcolor: #545454; //body text color ~ was = #62645c
@@ -52,25 +67,23 @@ $gold-grass: #CCAB1A;
 $purple-heart: #AB1ACC;
 $java: #1ACCAB;
 $legacy: #008080;
-
 $linkcolor: $brandblue; // default link color ~ was = #62645c , #545454
 $link-hover-color: darken($linkcolor, 15%) !default;
 $linkhovercolor: black; // #7EA29A on hovercolor of link
 $brandlinkhovercolor: black; // blrand logo color of link on hover
-
 // MONO-GREY
-$lightgrey1: #f4f4f4;/* background color of body */
+$lightgrey1: #f4f4f4;
+
+/* background color of body */
+
 $lightgrey2: #ededed;
 $medgrey: #ccc;
 $warmgrey1: #686258;
-$transgrey1: rgba(186,186,186,0.7);
+$transgrey1: rgba(186, 186, 186, 0.7);
 $grey80: #474747;
 $grey: #7c7c7c; //#b0aca8
 $grey80: darken($grey, 20%);
 $grey90: darken($grey, 30%);
-
-
-
 // RESPONSIVE BREAKS
 $break-small-max: 767px;
 $break-small-min: 768px;
@@ -78,13 +91,11 @@ $break-medium: 992px;
 $break-large: 1380px;
 $break-xlarge: 1480px;
 $break-xxlarge: 1600px;
-
 $gap: 4vw;
 $gutter: 12px;
 $gutter-neg: -12px;
 $overlap: -36px;
 $module-side: 22px;
-
 // COLUMN WIDTHS
 $col-1: 8.333333333333332%;
 $col-2: 16.666666666666664%;
@@ -97,10 +108,37 @@ $col-8: 66.66666666666666%;
 $col-9: 75%;
 $col-10: 83.33333333333334%;
 $col-11: 91.66666666666666%;
-
-
 // ELEMENTS
 $quotes-size: 520px;
 $full-3-height: 350px;
 $footer-height: 250px;
 $blog-heading: $proxima;
+:root {
+    /* colors */
+    --brand-blue: #1a3acc;
+    --dark-blue: #001c9b;
+    --very-dark-blue: #000e4e;
+    --magenta: #ab1acc;
+    --fuchsia: #84017e;
+    --blood-red: #600000;
+    --dim-red: #ee0202;
+    --golden: #ccab1a;
+    --bright-orange: rgba(255, 111, 63, 0.5);
+    --orange: #ff6f3f;
+    --dark-olive: #1a1e1c;
+    --black: #0a0c0e;
+    --white: #ffffff;
+    --base-bright: #f0f4f7;
+    --bright-grey: #f2f2f2;
+    --light-grey: #cfcfcf;
+    --warm-grey: #818181;
+    --metal: #5a6771;
+    --ever-green: #142a2d;
+    --cool-blue: #e0e9fe;
+    --euphoria: #00050f;
+    /* properties */
+    --font-base-size: 14px;
+    --font-small-size: 12px;
+    --font-tiny-size: 10px;
+    --font-micro-size: 8px;
+}
