--- a/css/packet.css
+++ b/css/packet.css
@@ -19,7 +19,7 @@
     animation: none;
     border: 1px solid #7f7cf9;
     transition: border 700ms;
-    box-shadow: -4px -5px 10px 0px #000;
+    box-shadow: -4px -5px 10px 0px rgba(00, 00, 00, .25);
     transition: box-shadow 200ms;
 }
 
@@ -51,8 +51,13 @@
   padding: 2.3em 18px 1.3em 18px;
 } */
 
+.packet:hover {
+    margin: 0 -12px;
+}
+
 .packet p {
-    padding: 8px 8px 8px 8px;
+    padding: 4px 8px;
+    line-height: 1;
 }
 
 .packet.tile-last p {
@@ -72,6 +77,7 @@
     -o-animation: color-change 3s infinite;
     -ms-animation: color-change 3s infinite;
     animation: color-change 3s infinite;
+    margin: 0;
 }
 
 .packet p:hover,
@@ -81,15 +87,27 @@
 }
 
 .packet svg {
-    position: absolute;
-    right: 18px;
-    margin: 6px 18px;
+    position: relative;
+    margin: 2px 0px;
 }
 
 .packet svg.inline {
     position: relative;
     display: inline-block;
-    margin: 6px 0 0 18px;
+    margin: 2px 0 0 0px;
+}
+
+.packet svg.block {
+    position: relative;
+    display: block;
+    margin: 2px 0 0 0px;
+    width: 100%;
+}
+
+.packet svg.absolute {
+    position: absolute;
+    right: 10px;
+    margin: 2px 12px;
 }
 
 
@@ -97,13 +115,13 @@
 
 .packet a:hover svg,
 .packet p:hover svg {
-    margin: 6px 0 0 100%;
+    margin: 2px 0 0 97%;
     transition: margin 700ms;
 }
 
 .packet a:hover svg.inline,
 .packet p:hover svg.inline {
-    margin: 6px 0 6px36px;
+    margin: 2px 0 60x 36px;
 }
 
 .packet .tile-index {
@@ -113,8 +131,11 @@
 
 .packet .tile-detail {
     float: right;
-    font-size: 12px;
+    font-size: 10px;
     text-align: right;
     display: block;
     margin: 6px 0 0 0;
+    position: absolute;
+    right: 8px;
+    top: 0;
 }
