--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -4,11 +4,21 @@
     --brand-blue: #1a3acc;
     --dark-blue: #001c9b;
     --very-dark-blue: #000e4e;
+    --cool-blue: #e0e9fe;
     --magenta: #ab1acc;
     --fuchsia: #84017e;
     --blood-red: #600000;
     --dim-red: #ee0202;
+    --legacy: #008080;
+    --java: #1ACCAB;
+    --pale-blue: #a6aaf4;
+    --robin: #A5C4DB;
     --golden: #ccab1a;
+    --burlywood: #DEB887;
+    --safety-green: #BBFF32;
+    --bright-green: #14E158;
+    --mint-green: #2e8c5f;
+    --pale-olive: #648476;
     --bright-orange: rgba(255, 111, 63, 0.5);
     --orange: #ff6f3f;
     --dark-olive: #1a1e1c;
@@ -20,7 +30,9 @@
     --warm-grey: #818181;
     --metal: #5a6771;
     --ever-green: #142a2d;
-    --cool-blue: #e0e9fe;
+    --deep-green: #0A202E;
+    --warm-black: #2D2828;
+    --deep-root: #004161;
     --euphoria: #00050f;
     /* properties */
     --font-base-size: 14px;
@@ -394,12 +406,46 @@ svg path {
     }
 }
 
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    25% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 01;
+    }
+}
+
 #sandbox.parallax #navbar {
-    opacity: .00125;
+    opacity: 1;
+    animation: fadeOut 2.95s forwards;
+    transition: opacity 2.5s ease-in-out;
 }
 
 #sandbox.parallax #navbar:hover {
     opacity: 1;
+    animation: fadeIn 1.75s forwards;
 }
 
-#sandbox.parallax #navbar
+
+/* #sandbox.parallax #navbar {
+    opacity: 0;
+    transition-delay: 2.5s;
+} */
