--- a/css/tao.css
+++ b/css/tao.css
@@ -90,17 +90,13 @@ body.with-navbar {
 }
 
 .toggle .quote-toggle {
-    /* background-color: white; */
-    /* light */
     background: rgb(26, 58, 204);
-    background: linear-gradient( 90deg, rgba(26, 58, 204, 1) 0%, rgba(255, 255, 255, 1) 100%);
-    /* med */
+    background: linear-gradient(90deg, rgba(26, 58, 204, 1) 0%, rgba(255, 255, 255, 1) 100%);
     background: rgb(26, 58, 204);
-    background: linear-gradient( 90deg, rgba(26, 58, 204, 0.3981793400954131) 0%, rgba(255, 255, 255, 1) 100%);
-    /* gradient */
+    background: linear-gradient(90deg, rgba(26, 58, 204, 0.3981793400954131) 0%, rgba(255, 255, 255, 1) 100%);
     background: rgb(26, 58, 204);
-    background: linear-gradient( 90deg, rgba(26, 58, 204, 0) 0%, rgba(26, 58, 204, 0.24691883589373254) 61%, rgba(255, 255, 255, 1) 100%);
-    padding: 0 18px;
+    background: linear-gradient(90deg, rgba(26, 58, 204, 0) 0%, rgba(26, 51, 1, 0.44) 61%, rgb(255, 255, 255) 100%);
+    padding: 8px 18px;
 }
 
 .quote-toggle a {
